src/snapshots/learn_chumsky__test__simple_expressions-6.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
(if true then 1 else 2) + 3
---

Some(
    (
        Binary(
            (
                If {
                    condition: (
                        Ident("true"),
                        4..8,
                    ),
                    then_branch: (
                        Int(1),
                        14..15,
                    ),
                    else_branch: (
                        Int(2),
                        21..22,
                    ),
                },
                1..22,
            ),
            Add,
            (
                Int(3),
                26..27,
            ),
        ),
        1..27,
    ),
)

--- Errors ---
[]
---
