src/snapshots/learn_chumsky__test__simple_expressions.snap
---
source: src/test.rs
expression: "&snapshot"
---
---
indentifier_1
---

Ok(
    (
        Ident("indentifier_1"),
        0..13,
    ),
)
