src/snapshots/learn_chumsky__test__unary_expressions-2.snap
---
source: src/test.rs
expression: "&snapshot"
---
Input: "-1.0"

Ok(
    (
        Unary(
            Neg,
            (
                Float(1, 0),
                1..4,
            ),
        ),
        0..4,
    ),
)
