src/snapshots/learn_chumsky__test__unary_expressions-3.snap
---
source: src/test.rs
expression: "&snapshot"
---
Input: "-0."

Ok(
    (
        Unary(
            Neg,
            (
                Float(0, 0),
                1..3,
            ),
        ),
        0..3,
    ),
)
