src/snapshots/learn_chumsky__test__unary_expressions-4.snap
---
source: src/test.rs
expression: "&snapshot"
---
Input: "---3"

Ok(
    (
        Unary(
            Neg,
            (
                Unary(
                    Neg,
                    (
                        Unary(
                            Neg,
                            (
                                Int(3),
                                3..4,
                            ),
                        ),
                        2..4,
                    ),
                ),
                1..4,
            ),
        ),
        0..4,
    ),
)
