src/snapshots/learn_chumsky__test__unary_expressions-5.snap
---
source: src/test.rs
expression: "&snapshot"
---
Input: "!true"

Ok(
    (
        Unary(
            Not,
            (
                Ident("true"),
                1..5,
            ),
        ),
        0..5,
    ),
)
