src/snapshots/learn_chumsky__test__unary_expressions-6.snap
---
source: src/test.rs
expression: "&snapshot"
---
Input: "!false"

Ok(
    (
        Unary(
            Not,
            (
                Ident("false"),
                1..6,
            ),
        ),
        0..6,
    ),
)
