src/snapshots/learn_chumsky__test__unary_expressions-8.snap
---
source: src/test.rs
expression: "&snapshot"
---
---
!(lhs == rhs)
---

Ok(
    (
        Unary(
            Not,
            (
                Binary(
                    (
                        Ident("lhs"),
                        2..5,
                    ),
                    Eq,
                    (
                        Ident("rhs"),
                        9..12,
                    ),
                ),
                2..12,
            ),
        ),
        0..12,
    ),
)
