src/snapshots/learn_chumsky__test__unary_expressions-9.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
!lhs == rhs
---

Some(
    (
        Binary(
            (
                Unary(
                    Not,
                    (
                        Ident("lhs"),
                        1..4,
                    ),
                ),
                0..4,
            ),
            Eq,
            (
                Ident("rhs"),
                8..11,
            ),
        ),
        0..11,
    ),
)

--- Errors ---
[]
---
