src/snapshots/learn_chumsky__test__unary_expressions.snap
---
source: src/test.rs
expression: "&snapshot"
---
Input: "-255"

Ok(
    (
        Unary(
            Neg,
            (
                Int(255),
                1..4,
            ),
        ),
        0..4,
    ),
)
